--- a/calculator/index.html
+++ b/calculator/index.html
@@ -47,5 +47,5 @@
         </div>
         </center>
     </body>
-    <script src="script.js"></script>
+    <script src="myscript.js"></script>
 </html>
