--- a/canvas/index.html
+++ b/canvas/index.html
@@ -1,8 +1,9 @@
 <html>
 <head>
 <title>My first canvas</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-<body>
+<body style="margin:0px; background-color:black;">
 <canvas></canvas>
 </body>
 <script type="text/javascript">
