--- a/puzzle/index.html
+++ b/puzzle/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Number Puzzle</title>
-        <link rel="stylesheet" src="style.css">
+        <link rel="stylesheet" href="style.css">
         <script src="https://code.jquery.com/jquery-3.2.1.min.js"> </script>
     </head>
     <body onload="setup()">    
