--- a/puzzle/index.html
+++ b/puzzle/index.html
@@ -14,7 +14,8 @@
             <span id="logo">PUZZLE</span>
             <span id="moves">0</span>
         </div>
-       <table>
+       <center>
+         <table>
            <tr>
                <td id="1"></td>
                <td id="2"></td>
@@ -39,7 +40,8 @@
                <td id="15"></td>
                <td id="16"></td>
            </tr>
-       </table> 
+       </table>
+     </center>
     </body>
     <script src="script.js"></script>
 </html>
