--- a/puzzle/index.html
+++ b/puzzle/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Number Puzzle</title>
+        <link rel="stylesheet" href="style.css">
         <script src="https://code.jquery.com/jquery-3.2.1.min.js"> </script>
     </head>
     <body onload="setup()">    
@@ -41,4 +43,5 @@
          </table> 
        </center>
     </body>
+    <script src="script.js"></script>
 </html>
