--- a/express/index.html
+++ b/express/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <title>Express Newspaper</title>
+  <link rel="icon" href="https://i.postimg.cc/dV4GF2xD/express.jpg">
 </head>
 <body style="margin:0px;" >
   <div id="paper" style="width:100%;"></div>
