--- a/imagepuzzle/index.html
+++ b/imagepuzzle/index.html
@@ -1,5 +1,6 @@
 <html><head>
         <title>Image Puzzle</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"> </script>
     <style id="style-from-editor">@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap');
 * {
@@ -10,8 +11,7 @@ html {
 }
 body {
     margin:0px;
-    background-image: linear-gradient(to top, #1e3c72 0%, #1e3c72 1%, #2a5298 100%);
- 
+    background-image: linear-gradient(-225deg, #65379B 0%, #886AEA 53%, #6457C6 100%);
 }
 img {
     width:100%;
