--- a/weather/index.html
+++ b/weather/index.html
@@ -3,14 +3,15 @@
     <head>
         <title>Weather App</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="style.css">
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Zilla+Slab&display=swap" rel="stylesheet">
         <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+        <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet">
+        
     </head>
     <body>
     <center>
-    <div id="topbar">WeatherAPP<span id="searchicon">🔍</span></div>
+    <div id="topbar">WeatherAPP<span id="searchicon" class="material-icons md-48">
+search
+</span></div>
     
     <div id="searchbox">
         <input type="text" id="search" placeholder="Enter City Name">
@@ -55,5 +56,4 @@
             Made By Shah Fahad
         </div>
     </body>
-    <script src="script.js"></script>
 </html>
