--- a/weather/index.html
+++ b/weather/index.html
@@ -3,6 +3,8 @@
     <head>
         <title>Weather App</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="style.css">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
         <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
         <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet">
         <link href="style.css" rel="stylesheet">
@@ -56,5 +58,6 @@ search
         <div id='footer'>
             Made By Shah Fahad
         </div>
+        <script src="script.js"></script>
     </body>
 </html>
