--- a/guesstheword/index.html
+++ b/guesstheword/index.html
@@ -46,7 +46,6 @@ input {
     font-size: 25px;
     box-shadow: 1px 1px 10px #B0BEC5;
     caret-color: lightgrey;
-    text-transform: uppercase ;
 }
 input:read-only {
     color: var(--fcolor);
@@ -62,9 +61,7 @@ input:read-only {
     box-shadow: 1px 1px 5px #B0BEC5;
     margin-bottom: 15px;
     cursor: pointer;
-}
-</style>
-<script type="text/javascript" id="script-from-editor">var firstLetter, secondLetter, thirdLetter, firstBlank, secondBlank, thirdBlank, word, temp, len, mode, newBlank, color= "#434343";
+}</style><script type="text/javascript" id="script-from-editor">var firstLetter, secondLetter, thirdLetter, firstBlank, secondBlank, thirdBlank, word, temp, len, mode, newBlank, color= "#434343";
 function loadWord() {
     $("#word").html("");
     var rnd = Math.floor(Math.random() * (words.length-1));
