--- a/guesstheword/index.html
+++ b/guesstheword/index.html
@@ -1,9 +1,10 @@
-<html><head>
-        <title>Guess the Word</title>
-        <meta name="viewport" content="width=device-width, intial-scale=1">
-        <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@700&amp;display=swap" rel="stylesheet">
-        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<html>
+   <head>
+    <title>Guess the Word</title>
+    <meta name="viewport" content="width=device-width, intial-scale=1">
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@700&amp;display=swap" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <style id="style-from-editor">* {
     font-family: 'Rubik', sans-serif;
     outline: 0;
