--- a/guesstheword/index.html
+++ b/guesstheword/index.html
@@ -273,4 +273,5 @@ var words= ["yellow", "indigo", "orange", "purple", "green", "brown", "black", "
         <button id="done" onclick="check()">Done</button>
     </div>
     
-</body></html>
+</body>
+</html>
