--- a/newspapers/index.html
+++ b/newspapers/index.html
@@ -1,11 +1,12 @@
 
 <html>
 <head>
-        <title>Page Title</title>
+        <title>Pak Newspapers</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://fonts.googleapis.com/css2?family=Bitter:wght@600&amp;display=swap" rel="stylesheet">
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <link rel="manifest" href="./manifest.webmanifest">
+        <link rel="icon" href="./icon-192x192.png" type="image/png" sizes="192x192">
       <style id="style-from-editor">@font-face {
     font-family: 'Urdu';
     src: url('https://rekhtastaticcdn.azureedge.net/fonts/NotoNastaliqUrdu-Regular.ttf');
