--- a/newspapers/index.html
+++ b/newspapers/index.html
@@ -7,6 +7,15 @@
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <link rel="manifest" href="./manifest.webmanifest">
         <link rel="icon" href="./icon-192x192.png" type="image/png" sizes="192x192">
+         <script
+    type="module"
+    src="https://cdn.jsdelivr.net/npm/@pwabuilder/pwainstall"
+  ></script>
+  <script async defer>
+    var installComponent = document.createElement("pwa-install");
+    document.body.appendChild(installComponent);
+    installComponent.getInstalledStatus();
+  </script>
       <style id="style-from-editor">@font-face {
     font-family: 'Urdu';
     src: url('https://rekhtastaticcdn.azureedge.net/fonts/NotoNastaliqUrdu-Regular.ttf');
