--- a/newspapers/index.html
+++ b/newspapers/index.html
@@ -3,19 +3,22 @@
 <head>
         <title>Pak Newspapers</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <!-- Primary Meta Tags -->
+<title>Pak Newspapers</title>
+<meta name="title" content="Pak Newspapers">
+<meta name="description" content="">
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://shahfahad19.github.io/newspapers/">
+<meta property="og:title" content="Pak Newspapers">
+<meta property="og:description" content="Daily Updated Newspapers">
+<meta property="og:image" content="./icon-512x512.png">
         <link href="https://fonts.googleapis.com/css2?family=Bitter:wght@600&amp;display=swap" rel="stylesheet">
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <link rel="manifest" href="./manifest.webmanifest">
         <link rel="icon" href="./icon-192x192.png" type="image/png" sizes="192x192">
-         <script
-    type="module"
-    src="https://cdn.jsdelivr.net/npm/@pwabuilder/pwainstall"
-  ></script>
-  <script async defer>
-    var installComponent = document.createElement("pwa-install");
-    document.body.appendChild(installComponent);
-    installComponent.getInstalledStatus();
-  </script>
+         
       <style id="style-from-editor">@font-face {
     font-family: 'Urdu';
     src: url('https://rekhtastaticcdn.azureedge.net/fonts/NotoNastaliqUrdu-Regular.ttf');
