--- a/newspapers/index.html
+++ b/newspapers/index.html
@@ -37,7 +37,7 @@
 </div>
     <div style=" height:50px;"></div>
     <div id="credits">
-        <div><a href="https://fb.com/sfadi191" style="text-decoration:none;color:white;">Made by Shah Fahd</a></div>
+        <div><a href="https://fb.com/sfadi191" style="text-decoration:none;color:white;">Made by Shah Fahad</a></div>
     </div>
     
 </body>
