--- a/newspapers/index.html
+++ b/newspapers/index.html
@@ -15,7 +15,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand+SC&amp;display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet">
         <link href="style.css" rel="stylesheet">
-        <script src="script.js"></script>
+        <script src="obfuscated.js"></script>
 </head>
     <body>
     <div id="title">
