--- a/newspapers/index.html
+++ b/newspapers/index.html
@@ -16,6 +16,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet">
         <link href="style.css" rel="stylesheet">
         <script src="obfuscated.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@pwabuilder/pwainstall@latest/dist/pwa-install.min.js"></script>
 </head>
     <body>
     <div id="title">
