--- a/newspapers/index.html
+++ b/newspapers/index.html
@@ -33,7 +33,8 @@
 </span>
         </div>
     </div>
-    
+    <button class="add-button">Add to home screen</button>
+
     <div id="loadingbox">
         <div id="loading"></div>
     </div>
