--- a/newspapers/index.html
+++ b/newspapers/index.html
@@ -33,7 +33,7 @@
 </span>
         </div>
     </div>
-    <button style="position:absolute;left:0px;bottom:0px;width:300px;height:50px;" class="add-button">Add to home screen</button>
+    <button style="position:absolute;left:0px;bottom:0px;width:300px;height:50px;z-index:999;" class="add-button">Add to home screen</button>
 
     <div id="loadingbox">
         <div id="loading"></div>
