--- a/pknews/index.html
+++ b/pknews/index.html
@@ -12,7 +12,7 @@
     <meta property="og:description" content="Daily Updated Newspapers">
      <meta property="og:image" content="./icon-512x512.png">
      <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-     <link rel="icon" href="./icon-192x192.png" type="image/png" sizes="192x192">
+     <link rel="icon" href="../newspapers/icon-192x192.png" type="image/png" sizes="192x192">
      <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand+SC&amp;display=swap" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet">
       <link href="https://shahfahad19.github.io/newspapers/style.css" rel="stylesheet">
