--- a/pknews/index.html
+++ b/pknews/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
-    <meta name="theme-color" content="#db4938">
+    <meta name="theme-color" content="#4169e1">
     <title>Pakistan Newspapers</title>
     <meta property="og:description" content="Daily Updated Newspapers">
     <meta property="og:image" content="images/512x512.png">
