--- a/pknews/index.html
+++ b/pknews/index.html
@@ -33,7 +33,7 @@
 </span>
         </div>
     </div>
-    
+    <button id="btnAdd">Add To Home Screen</button>
     <div id="loadingbox">
         <div id="loading"></div>
     </div>
