--- a/newspapers/index.html
+++ b/newspapers/index.html
@@ -8,14 +8,14 @@
         <meta property="og:url" content="https://shahfahad19.github.io/newspapers/">
         <meta property="og:title" content="Pak Newspapers">
         <meta property="og:description" content="Daily Updated Newspapers">
-        <meta property="og:image" content="./icon-512x512.png">
+        <meta property="og:image" content="./images/512x512.png">
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <link rel="manifest" href="manifest.json" />
-        <link rel="icon" href="./icon-192x192.png" type="image/png" sizes="192x192">
+        <link rel="icon" href="./images/192x192.png" type="image/png" sizes="192x192">
         <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand+SC&amp;display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet">
         <link href="style.css" rel="stylesheet">
-        <script src="obfuscated.js"></script>
+        <script src="script.js"></script>
         <script type="module">
    import 'https://cdn.jsdelivr.net/npm/@pwabuilder/pwaupdate';
    const el = document.createElement('pwa-update');
