--- a/newspapers/index.html
+++ b/newspapers/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
   <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -5,6 +6,8 @@
         <meta name="title" content="Pak Newspapers">
         <meta name="description" content="">
         <meta property="og:type" content="website">
+        <html lang="ur">
+        <link rel="apple-touch-icon" href="images/180x180.png">
         <meta property="og:url" content="https://shahfahad19.github.io/newspapers/">
         <meta property="og:title" content="Pak Newspapers">
         <meta property="og:description" content="Daily Updated Newspapers">
