--- a/newspapers/index.html
+++ b/newspapers/index.html
@@ -7,6 +7,7 @@
         <meta name="description" content="">
         <meta property="og:type" content="website">
         <html lang="ur">
+    <meta name="theme-color" content="#4169e1">
         <link rel="apple-touch-icon" href="images/180x180.png">
         <meta property="og:url" content="https://shahfahad19.github.io/newspapers/">
         <meta property="og:title" content="Pak Newspapers">
