--- a/newspapers/index.html
+++ b/newspapers/index.html
@@ -7,7 +7,8 @@
         <meta name="description" content="">
         <meta property="og:type" content="website">
         <html lang="ur">
-    <meta name="theme-color" content="#4169e1">
+        <meta name="theme-color" content="#4169e1">
+        <meta property="og:description" content="Daily Updated Newspapers">
         <link rel="apple-touch-icon" href="images/180x180.png">
         <meta property="og:url" content="https://shahfahad19.github.io/newspapers/">
         <meta property="og:title" content="Pak Newspapers">
@@ -21,10 +22,11 @@
         <link href="style.css" rel="stylesheet">
         <script src="script.js"></script>
         <script type="module">
-   import 'https://cdn.jsdelivr.net/npm/@pwabuilder/pwaupdate';
-   const el = document.createElement('pwa-update');
-   document.body.appendChild(el);
-</script>
+           import 'https://cdn.jsdelivr.net/npm/@pwabuilder/pwaupdate';
+           const el = document.createElement('pwa-update');
+           document.body.appendChild(el);
+        </script>
+        <script type="module" src="https://cdn.jsdelivr.net/npm/@pwabuilder/pwainstall@latest/dist/pwa-install.min.js"></script>
 </head>
     <body>
     <div id="title">
