--- a/newspapers/index.html
+++ b/newspapers/index.html
@@ -8,7 +8,7 @@
         <meta property="og:type" content="website">
         <html lang="ur">
         <meta name="theme-color" content="#4169e1">
-        <meta property="og:description" content="Daily Updated Newspapers">
+        <meta name="description" content="Daily updated newspapers!">
         <link rel="apple-touch-icon" href="images/180x180.png">
         <meta property="og:url" content="https://shahfahad19.github.io/newspapers/">
         <meta property="og:title" content="Pak Newspapers">
