--- a/newspapers/index.html
+++ b/newspapers/index.html
@@ -14,7 +14,7 @@
         <meta property="og:title" content="Pak Newspapers">
         <meta property="og:description" content="Daily Updated Newspapers">
         <meta property="og:image" content="./images/512x512.png">
-        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+        <script src="src/jquery-3.6.0.min.js"></script>
         <link rel="manifest" href="manifest.json" />
         <link rel="icon" href="./images/192x192.png" type="image/png" sizes="192x192">
         <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand+SC&amp;display=swap" rel="stylesheet">
