--- a/newspapers/index.html
+++ b/newspapers/index.html
@@ -22,6 +22,13 @@
         <link href="style.css" rel="stylesheet">
         <script src="script.js"></script>
         <script type="module" src="https://cdn.jsdelivr.net/npm/@pwabuilder/pwainstall@latest/dist/pwa-install.min.js"></script>
+        <style>
+.add-button {
+  position: absolute;
+  top: 1px;
+  left: 1px;
+} 
+</style>
 </head>
     <body>
     <div id="title">
@@ -34,7 +41,8 @@
 </span>
         </div>
     </div>
-    
+    <button class="add-button">Add to home screen</button>
+
     <div id="loadingbox">
         <div id="loading"></div>
     </div>
