--- a/newspapers/index.html
+++ b/newspapers/index.html
@@ -22,13 +22,6 @@
         <link href="style.css" rel="stylesheet">
         <script src="script.js"></script>
         <script type="module" src="https://cdn.jsdelivr.net/npm/@pwabuilder/pwainstall@latest/dist/pwa-install.min.js"></script>
-        <style>
-.add-button {
-  position: absolute;
-  top: 1px;
-  left: 1px;
-} 
-</style>
 </head>
     <body>
     <div id="title">
@@ -40,9 +33,7 @@
             <span id="dlicon" class="material-icons md-48">
 </span>
         </div>
-    </div>
-    <button class="add-button">Add to home screen</button>
-
+    </div>I
     <div id="loadingbox">
         <div id="loading"></div>
     </div>
