--- a/emojigame/index.html
+++ b/emojigame/index.html
@@ -1,4 +1,5 @@
-<html><head>
+<html>
+    <head>
       <title>Emoji Game</title>
       <meta name="viewport" content="width=device-width" ,="" initial-scale="1">
       <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -32,9 +33,6 @@ body {
     width: 100%;
     font-size: 22px;
     color: white;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -42,7 +40,7 @@ body {
 }
 
 input {
-    background: rgba(255,255,255,.65) ;
+    background: rgba(255,255,255,.8) ;
     padding: 10px;
     border: 1px solid #673AB7;
     font-size: 18px;
@@ -50,12 +48,11 @@ input {
     width: 80px;
     color: #512DA8;
 }
+
 .answer {
     margin-top: 16px;
-    width: 300px;
-    position: relative;
-    
 }
+
 .done ,.del{
     background-color: #673AB7;
     font-size: 18px;
@@ -68,7 +65,7 @@ input {
 }
 
 .item {
-    background: rgba(255,255,255,.5);
+    background: rgba(255,255,255,.8);
     padding: 8px;
     border-radius: 8px;
     width: 30px;
@@ -77,7 +74,7 @@ input {
     margin: 0px 5px 0px 5px;
 }
 .answer .missing {
-    background: rgba(255,255,255,.65);
+    background: rgba(255,255,255,.8);
     padding: 5px;
     padding-bottom: 9px;
     border-radius: 8px;
@@ -85,30 +82,29 @@ input {
     display: inline-block;
     color: #512DA8;
     font-size: 23px;
-    
 }
 
 .del {
     width: 50px;
     margin: 0px;
     border-radius: 8px;
-    background: rgba(255,255,255,.65);
+    background: rgba(255,255,255,.8);
     border-color: transparent ;
     color: #673AB7;
 }
+
 .nums {
     margin: 10px;
 }
 
 .nums button {
-    display: inline-block;
     font-size: 20px;
     width: 40px;
     height: 40px;
     background-color: transparent;
     color: white;
     border: 2px solid white;
-    border-radius: 8px;
+    border-radius: 6px;
     margin: 6.5px;
 }
 </style>
