--- a/92/index.html
+++ b/92/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Page Title</title>
+        <title>92 News</title>
         <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
         <script>
             var tries=0, tp;
