--- a/92/index.html
+++ b/92/index.html
@@ -2,6 +2,11 @@
 <html>
     <head>
         <title>92 News</title>
+        <style>
+          img {
+            width: 100%;
+          }
+        </style>
         <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
         <script>
             var tries=0, tp;
