--- a/newspapers/index.html
+++ b/newspapers/index.html
@@ -34,8 +34,8 @@
   </span>
           </div>
       </div>
-      <div id="loadingbox">
-          <div id="loading"></div>
+      <div id="msgbox">
+          <div id="msg"></div>
       </div>
       <div id="box">
       	<div class="box"></div>
