--- a/92/index.html
+++ b/92/index.html
@@ -7,7 +7,8 @@
             width: 100%;
           } 
           h2 {
-            text-shadow: -0.5px -0.5px 0 #ffff, 0.5px -0.5px 0 #ffff, -0.5px 0.5px 0 #ffff, 0.5px 0.5px 0 #ffff;  
+            -webkit-text-stroke: 2px white;
+            text-shadow: 0px 0px 2px white;
           }
           body {
             background-color: #373737;
