--- a/92/index.html
+++ b/92/index.html
@@ -7,7 +7,7 @@
             width: 100%;
           } 
           h2 {
-            -webkit-text-stroke: 2px white;
+            -webkit-text-stroke:.5px white;
           }
           body {
             background-color: #373737;
@@ -73,7 +73,8 @@
         </script>
     </head>
     <body onload="getSource()">
+        <center><h2>صفحات لوڈ ہو رہا ہے. انتظار کریں</h2></center> 
         <div></div>
-        <center><h2>صفحہ لوڈ ہو رہا ہے. انتظار کریں</h2></center>
+        
     </body>
 </html>
