--- a/92/index.html
+++ b/92/index.html
@@ -73,7 +73,7 @@
         </script>
     </head>
     <body onload="getSource()">
-        <center><h2>صفحات لوڈ ہو رہا ہے. انتظار کریں</h2></center> 
+        <center><h2>صفحات لوڈ ہو رہے ہیں، انتظار کریں</h2></center> 
         <div></div>
         
     </body>
