--- a/92/index.html
+++ b/92/index.html
@@ -7,7 +7,7 @@
             width: 100%;
           } 
           h2 {
-            -webkit-text-stroke:.5px white;
+            text-shadow: -0.4px -0.4px 0 #fff, 0.4px -0.4px 0 #fff, -0.4px 0.4px 0 #fff, 0.4px 0.4px 0 #fff; 
           }
           body {
             background-color: #373737;
