--- a/newspapers/index.html
+++ b/newspapers/index.html
@@ -19,6 +19,7 @@
           <link rel="icon" href="./images/192x192.png" type="image/png" sizes="192x192">
           <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand+SC&amp;display=swap" rel="stylesheet">
           <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet">
+          <link href="https://fonts.googleapis.com/earlyaccess/notonastaliqurdudraft.css" rel="stylesheet">
           <link href="style.css" rel="stylesheet">
           <script src="script.js"></script>
           <script type="module" src="https://cdn.jsdelivr.net/npm/@pwabuilder/pwainstall@latest/dist/pwa-install.min.js"></script>
