--- a/sokoban/index.html
+++ b/sokoban/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="style.css" rel="stylesheet">
-  <script scr="script.js">
+  <link rel="stylesheet" href="style.css">
+  <script src="script.js"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js" type="text/javascript" charset="utf-8"></script>
   <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet">
-  <script src="https://shahfahad19.github.io/sokoban/js/swiped-events.min.js"></script>
+  <script src="js/swiped-events.min.js"></script>
   <title>Sokoban</title>
 </head>
 <body>
