--- a/newspapers/index.html
+++ b/newspapers/index.html
@@ -4,18 +4,18 @@
           <meta name="viewport" content="width=device-width, initial-scale=1">
           <title>Pak Newspapers</title>
           <meta name="title" content="Pak Newspapers">
-          <meta name="description" content="">
+          <meta name="description" content="Daily updated newspapers!">
           <meta property="og:type" content="website">
           <html lang="ur">
           <meta name="theme-color" content="#4169e1">
           <meta name="description" content="Daily updated newspapers!">
-          <link rel="apple-touch-icon" href="images/180x180.png">
-          <meta property="og:url" content="https://shahfahad19.github.io/newspapers/">
+          <link rel="apple-touch-icon" href="./images/icon-192x192.png">
+          <meta property="og:url" content="https://newspaperspk.netlify.app">
           <meta property="og:title" content="Pak Newspapers">
           <meta property="og:description" content="Daily Updated Newspapers">
-          <meta property="og:image" content="./images/512x512.png">
+          <meta property="og:image" content="./images/icon-512x512.png">
           <script src="src/jquery.min.js"></script>
-          <link rel="manifest" href="manifest.json" />
+          <link rel="manifest" href="manifest.webmanifest" />
           <link rel="icon" href="./images/192x192.png" type="image/png" sizes="192x192">
           <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand+SC&amp;display=swap" rel="stylesheet">
           <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet">
