--- a/newspapers/index.html
+++ b/newspapers/index.html
@@ -9,21 +9,29 @@
           <html lang="ur">
           <meta name="theme-color" content="#4169e1">
           <meta name="description" content="Daily updated newspapers!">
-          <link rel="apple-touch-icon" href="./images/icon-192x192.png">
+          <!-- ios support -->
+          <link rel="apple-touch-icon" href="images/72x72.png">
+          <link rel="apple-touch-icon" href="images/96x96.png">
+          <link rel="apple-touch-icon" href="images/128x128.png">
+          <link rel="apple-touch-icon" href="images/144x144.png">
+          <link rel="apple-touch-icon" href="images/152x152.png">
+          <link rel="apple-touch-icon" href="images/192x192.png">
+          <link rel="apple-touch-icon" href="images/384x384.png">
+          <link rel="apple-touch-icon" href="images/512x512.png">
+          <meta name="apple-mobile-web-app-status-bar" content="#4169e1"> 
           <meta property="og:url" content="https://newspaperspk.netlify.app">
           <meta property="og:title" content="Pak Newspapers">
           <meta property="og:description" content="Daily Updated Newspapers">
-          <meta property="og:image" content="./images/icon-512x512.png">
+          <meta property="og:image" content="images/512x512.png">
           <script src="src/jquery.min.js"></script>
           <link rel="manifest" href="manifest.webmanifest" />
-          <link rel="icon" href="./images/192x192.png" type="image/png" sizes="192x192">
+          <link rel="icon" href="/images/192x192.png" type="image/png" sizes="192x192">
           <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand+SC&amp;display=swap" rel="stylesheet">
           <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet">
           <link href="https://fonts.googleapis.com/earlyaccess/notonastaliqurdudraft.css" rel="stylesheet">
           <link href="style.css" rel="stylesheet">
           <script src="script.js"></script>
-          <script type="module" src="https://cdn.jsdelivr.net/npm/@pwabuilder/pwainstall@latest/dist/pwa-install.min.js"></script>
-  </head>
+      </head>
       <body>
       <div id="title">
           <div id="back">
