--- a/newspapers/index.html
+++ b/newspapers/index.html
@@ -24,7 +24,7 @@
           <meta property="og:description" content="Daily Updated Newspapers">
           <meta property="og:image" content="images/512x512.png">
           <script src="src/jquery.min.js"></script>
-          <link rel="manifest" href="manifest.webmanifest" />
+          <link rel="manifest" href="manifest.json" />
           <link rel="icon" href="/images/192x192.png" type="image/png" sizes="192x192">
           <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand+SC&amp;display=swap" rel="stylesheet">
           <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet">
