--- a/newspapers/index.html
+++ b/newspapers/index.html
@@ -31,6 +31,8 @@
           <link href="https://fonts.googleapis.com/earlyaccess/notonastaliqurdudraft.css" rel="stylesheet">
           <link href="style.css" rel="stylesheet">
           <script src="script.js"></script>
+          <script type="module" src="https://cdn.jsdelivr.net/npm/@pwabuilder/pwainstall@latest/dist/pwa-install.min.js"></script>
+
       </head>
       <body>
       <div id="title">
