--- a/pkpapers/index.html
+++ b/pkpapers/index.html
@@ -5,6 +5,10 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link rel="icon" href="icon.png" type="image/png">
+      <meta property="og:image" content="icon.png">
+      <meta name="theme-color" content="#009688">
+      <meta name="description" content= "Daily Updated Pakistani Newspapers in PDF" />
       <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
       <style>
          * {
