--- a/newspapers/index.html
+++ b/newspapers/index.html
@@ -50,6 +50,9 @@
       </div>
       <div id="box">
       	<div class="box"></div>
+        <span onclick="pdf()" class="material-icons md-48 downpdf">
+          picture_as_pdf
+        </span> 
   </div>
       <div id="credits">
           <div><a href="https://fb.com/sfadi191" style="text-decoration:none;color:white;">Made by Shah Fahad</a></div>
