--- a/weather/index.html
+++ b/weather/index.html
@@ -6,7 +6,7 @@
         <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
         <link href="https://fonts.googleapis.com/css2?family=Zilla+Slab:wght@400&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet">
-        
+        <link href="./style.css" rel="stylesheet">
     </head>
     <body>
     <center>
@@ -63,5 +63,6 @@ search
         <div id='footer'>
             Made By Shah Fahad
         </div>
+        <script src="./script.js"></script>
     </body>
 </html>
