--- a/bill/index.html
+++ b/bill/index.html
@@ -1,1 +1,12 @@
-<script type="text/javascript">document.write(unescape('%3c%21%64%6f%63%74%79%70%65%20%68%74%6d%6c%3e%0d%0a%3c%68%74%6d%6c%3e%0d%0a%3c%68%65%61%64%3e%0d%0a%3c%74%69%74%6c%65%3e%50%65%73%63%6f%20%42%69%6c%6c%3c%2f%74%69%74%6c%65%3e%0d%0a%3c%6c%69%6e%6b%20%72%65%6c%3d%73%74%79%6c%65%73%68%65%65%74%20%68%72%65%66%3d%2e%2f%73%74%79%6c%65%2e%63%73%73%3e%0d%0a%3c%73%63%72%69%70%74%20%73%72%63%3d%68%74%74%70%73%3a%2f%2f%63%6f%64%65%2e%6a%71%75%65%72%79%2e%63%6f%6d%2f%6a%71%75%65%72%79%2d%33%2e%32%2e%31%2e%6d%69%6e%2e%6a%73%3e%3c%2f%73%63%72%69%70%74%3e%0d%0a%3c%2f%68%65%61%64%3e%0d%0a%3c%62%6f%64%79%3e%0d%0a%3c%73%63%72%69%70%74%20%73%72%63%3d%2e%2f%73%63%72%69%70%74%2e%6a%73%3e%3c%2f%73%63%72%69%70%74%3e%0d%0a%3c%2f%62%6f%64%79%3e%0d%0a%3c%2f%68%74%6d%6c%3e'));</script>
+<!doctype html>
+<html>
+<head>
+<title>Pesco Bill</title>
+<link rel=stylesheet href=./style.css>
+<link rel="manifest" href=./manifest.webmanifest"/>
+<script src=https://code.jquery.com/jquery-3.2.1.min.js></script>
+</head>
+<body>
+<script src=./script.js></script>
+</body>
+</html>
