--- a/bill/index.html
+++ b/bill/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 <title>Pesco Bill</title>
-<link rel=stylesheet href=./style.css>
-<link rel="manifest" href=./manifest.json"/>
-<script src=https://code.jquery.com/jquery-3.2.1.min.js></script>
+<link rel="stylesheet" href="./style.css">
+<link rel="manifest" href="./manifest.json">
+<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 </head>
 <body>
-<script src=./script.js></script>
+<script src="./script.js"></script>
 </body>
 </html>
