--- a/bill/index.html
+++ b/bill/index.html
@@ -3,6 +3,7 @@
 <head>
 <title>Pesco Bill</title>
 <link rel="stylesheet" href="./style.css">
+<link rel="icon" href="./icon-192x192.png" type="image/png" sizes="192x192">
 <link rel="manifest" href="./manifest.json">
 <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 </head>
