--- a/ytinfo/index.html
+++ b/ytinfo/index.html
@@ -117,6 +117,19 @@ span:hover {
     color: white;
     font-size: 14px;
 }
+.footer {
+    background-color: #282828;
+    text-align: center;
+    position: absolute;
+    width: 100%;
+    bottom: 0;
+}
+
+a {
+    color: white;
+    display: inline-block ;
+    padding: 10px;
+}
     </style>
   </head>
   <body>
@@ -174,7 +187,7 @@ span:hover {
       </div>
     </div>
     </center>
-    
+    <div class="footer"><a href="https://fb.com/sfadi191">Made By Shah Fahad</a></div>
     <script>
         search = l => {
     l = l.replace("https:", "");
