--- a/pkpapers/index.html
+++ b/pkpapers/index.html
@@ -89,6 +89,7 @@
       <div class="join">
          <center>
             <div class="button">
+               <button style="background-color: #0F0F0F;"><a href="https://urdunewsapi.herokuapp.com/PakNewspapers-v1.2.apk">Download App</a></button>
                <button style="background-color: #25D366;"><a href="https://chat.whatsapp.com/G2B7czn6AeO9WSadm6Iqrx">Join Whatsapp Group</a></button>
                <button style="background-color:#1AB7EA;"><a href="https://t.me/pakpapers">Join Telegram Group</a></button>
             </div>
