--- a/pkpapers/index.html
+++ b/pkpapers/index.html
@@ -89,13 +89,13 @@
       <div class="join">
          <center>
             <div class="button">
-               <button style="background-color: #0F0F0F;"><a href="https://urdunewsapi.herokuapp.com/PakNewspapers-v1.2.apk">Download App</a></button>
+               <button style="background-color: #708090;"><a href="https://urdunewsapi.herokuapp.com/PakNewspapers-v1.2.apk">Download App</a></button>
                <button style="background-color: #25D366;"><a href="https://chat.whatsapp.com/G2B7czn6AeO9WSadm6Iqrx">Join Whatsapp Group</a></button>
                <button style="background-color:#1AB7EA;"><a href="https://t.me/pakpapers">Join Telegram Group</a></button>
             </div>
          </center>
          <br />
-         <span>Join group and get daily updated newspapers in pdf!</span>
+         <span>Download the app to read daily 30+ newspapers of 20 cities and Magazines.<br/>Also join our whatsapp group to get updates of the app!</span>
       </div>
    </body>
 </html>
