--- a/pkpapers/index.html
+++ b/pkpapers/index.html
@@ -1,101 +1,43 @@
 <!DOCTYPE html>
-<html>
-   <head>
-      <title>Pakistani Newspapers</title>
-      <meta name="viewport" content="width=device-width, initial-scale=1">
-      <link rel="preconnect" href="https://fonts.googleapis.com">
-      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-      <link rel="icon" href="icon.png" type="image/png">
-      <meta property="og:image" content="icon.png">
-      <meta name="theme-color" content="#009688">
-      <meta name="description" content= "Daily Updated Pakistani Newspapers in PDF" />
-      <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
-      <style>
-         * {
-         font-family: 'Poppins', sans-serif;
-         }
-         body {
-         margin: 0px;
-         background-color: #009688;
-         }
-         .logo {
-         height: 350px;
-         display: flex;
-         justify-content: center;
-         align-items: center;
-         background-color: white;
-         }
-         img {
-         height: 150px;
-         width: 150px;
-         }
-         .join {
-         text-align: center;
-         background-color: #009688;
-         color: white;
-         }
-         .header {
-         background-color: #009688;
-         text-align: center;
-         }
-         .header span {
-         color: white;
-         display: inline-block ;
-         padding: 10px;
-         font-size: 20px;
-         }
-         .logo svg {
-         position: absolute;
-         bottom: 10px;
-         left: 0px;
-         }
-         .join .button {
-         display: flex;
-         flex-direction: column;
-         width: 200px;
-         }
-         .join .button button {
-         margin-top: 10px;
-         border: none;
-         border-radius: 8px;
-         padding: 10px;
-         font-size: 16px;
-         z-index: 99;
-         color: white;
-         box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.25);
-         }
-         .join span {
-         width: 70%;
-         display: inline-block ;
-         }
-         a {
-         color:white;
-         text-decoration: none;
-         height: 100%;
-         width: 100%;
-         }
-      </style>
-   </head>
-   <body>
-      <div class="header">
-         <span>Pak Newspapers</span>
-      </div>
-      <div class='logo'>
-         <img src="https://i.ibb.co/4FkbsP7/20210907-175822.png">
-         <svg height="100%" width="100%" id="svg" viewBox="0 0 1440 400" xmlns="http://www.w3.org/2000/svg" class="transition duration-300 ease-in-out delay-150">
-            <path d="M 0,400 C 0,400 0,200 0,200 C 102.34449760765548,161.35885167464116 204.68899521531097,122.71770334928232 301,141 C 397.31100478468903,159.28229665071768 487.5885167464115,234.48803827751195 575,231 C 662.4114832535885,227.51196172248805 746.956937799043,145.33014354066987 844,135 C 941.043062200957,124.66985645933013 1050.5837320574162,186.19138755980862 1152,209 C 1253.4162679425838,231.80861244019138 1346.7081339712918,215.9043062200957 1440,200 C 1440,200 1440,400 1440,400 Z" stroke="none" stroke-width="0" fill="#009688"></path>
-         </svg>
-      </div>
-      <div class="join">
-         <center>
-            <div class="button">
-               <button style="background-color: #708090;"><a href="https://urdunewsapi.herokuapp.com/PakNewspapers-v1.2.apk">Download App</a></button>
-               <button style="background-color: #25D366;"><a href="https://chat.whatsapp.com/G2B7czn6AeO9WSadm6Iqrx">Join Whatsapp Group</a></button>
-               <button style="background-color:#1AB7EA;"><a href="https://t.me/paknewspapers">Join Telegram Group</a></button>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="./css/main.css" />
+        <title>Pak News</title>
+    </head>
+    <body class="bg-black flex flex-col justify-center h-screen">
+        <div class="flex flex-col items-center justify-center md:flex-row">
+            <img class="border-white w-40 md:w-96" src="./images/logo.png" />
+            <div>
+                <div class="text-white text-center">
+                    <p class="text-3xl font-semibold">
+                        <span class="text-red-600 font-light">Download</span>
+                        Pak News
+                    </p>
+                    <div class="text-xl font-light">
+                        <p>
+                            To Read
+                            <span class="font-normal">30+ Newspapers</span>
+                        </p>
+                        <p>of <span class="font-normal">20 cities</span></p>
+                    </div>
+                </div>
+
+                <div class="mt-8 flex flex-col">
+                    <a
+                        href="#"
+                        class="bg-white p-2 rounded-md font-bold text-center m-1"
+                        >Download App</a
+                    >
+                    <a
+                        href="#"
+                        class="bg-green-600 text-white p-2 rounded-md font-bold text-center m-1"
+                        >Join Whatsapp Group</a
+                    >
+                </div>
             </div>
-         </center>
-         <br />
-         <span>Download the app to read daily 30+ newspapers of 20 cities and Magazines.<br/>Also join our whatsapp group to get updates of the app!</span>
-      </div>
-   </body>
+        </div>
+    </body>
 </html>
