--- a/pkpapers/index.html
+++ b/pkpapers/index.html
@@ -5,6 +5,18 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="./css/main.css" />
+
+        <link rel="icon" href="/images/logo.png" />
+        <meta name="theme-color" content="#0f0f0f" />
+        <meta name="description" content="Pak News App" />
+        <meta property="og:url" content="https://paknews.netlify.app" />
+        <meta property="og:title" content="Pak News" />
+        <meta
+            property="og:description"
+            content="Read 35+ Newspapers and Magazines Daily"
+        />
+        <meta property="og:image" content="/images/logo.png" />
+        <link rel="apple-touch-icon" href="/images/logo.png" />
         <title>Pak News</title>
     </head>
     <body class="bg-black flex flex-col justify-center h-screen">
