--- a/pkpapers/index.html
+++ b/pkpapers/index.html
@@ -39,12 +39,12 @@
 
                 <div class="mt-8 flex flex-col">
                     <a
-                        href="#"
+                        href="https://urdunewsapi.herokuapp.com/PakNewspapers-v1.3.apk"
                         class="bg-white p-2 rounded-md font-bold text-center m-1"
                         >Download App</a
                     >
                     <a
-                        href="#"
+                        href="https://chat.whatsapp.com/G2B7czn6AeO9WSadm6Iqrx"
                         class="bg-green-600 text-white p-2 rounded-md font-bold text-center m-1"
                         >Join Whatsapp Group</a
                     >
