--- a/pkpapers/index.html
+++ b/pkpapers/index.html
@@ -39,7 +39,7 @@
 
                 <div class="mt-8 flex flex-col">
                     <a
-                        href="https://urdunewsapi.herokuapp.com/PakNewspapers-v1.3.apk"
+                        href="https://urdunewsapi.herokuapp.com/PakNews.apk"
                         class="bg-white p-2 rounded-md font-bold text-center m-1"
                         >Download App</a
                     >
